# galactiz

./: Makefile.am  configure.in  documentation.dox.in  dodoc  galactiz.rc  templatise
doxygen/: header.html
src/: Makefile.am  cinetic.cpp  cinetic.h  fakexmlread.cpp  fakexmlread.h  main.cpp  morespin.cpp  morespin.h  rcfile.cpp  rcfile.h  sxd_read.cpp  sxd_read.h  tdfps.cpp  tdfps.h  tdgal.cpp  tdgal.h  tdqudoor.cpp  tdqudoor.h
